// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hora-wasm > BruteForceIndex - bulk inserts and indexes using angular 1`] = `
Uint32Array [
  345,
  316,
  72,
  40,
  403,
  535,
  548,
  357,
  385,
  324,
]
`;

exports[`hora-wasm > BruteForceIndex - bulk inserts and indexes using cosine_similarity 1`] = `
Uint32Array [
  839,
  122,
  651,
  463,
  381,
  605,
  280,
  418,
  287,
  106,
]
`;

exports[`hora-wasm > BruteForceIndex - bulk inserts and indexes using dot_product 1`] = `
Uint32Array [
  681,
  213,
  241,
  770,
  706,
  571,
  42,
  127,
  581,
  126,
]
`;

exports[`hora-wasm > BruteForceIndex - bulk inserts and indexes using euclidean 1`] = `
Uint32Array [
  661,
  765,
  444,
  249,
  616,
  183,
  636,
  165,
  83,
  417,
]
`;

exports[`hora-wasm > BruteForceIndex - bulk inserts and indexes using manhattan 1`] = `
Uint32Array [
  648,
  153,
  396,
  409,
  610,
  766,
  74,
  521,
  545,
  598,
]
`;

exports[`hora-wasm > BruteForceIndex - creates an index and searches over it using angular 1`] = `
Uint32Array [
  79,
  734,
  497,
  517,
  900,
  113,
  950,
  918,
  865,
  509,
]
`;

exports[`hora-wasm > BruteForceIndex - creates an index and searches over it using cosine_similarity 1`] = `
Uint32Array [
  315,
  712,
  422,
  433,
  391,
  22,
  824,
  286,
  857,
  799,
]
`;

exports[`hora-wasm > BruteForceIndex - creates an index and searches over it using dot_product 1`] = `
Uint32Array [
  770,
  681,
  351,
  614,
  171,
  971,
  256,
  127,
  416,
  31,
]
`;

exports[`hora-wasm > BruteForceIndex - creates an index and searches over it using euclidean 1`] = `
Uint32Array [
  461,
  89,
  236,
  723,
  157,
  305,
  142,
  686,
  777,
  182,
]
`;

exports[`hora-wasm > BruteForceIndex - creates an index and searches over it using manhattan 1`] = `
Uint32Array [
  630,
  542,
  781,
  344,
  189,
  906,
  153,
  915,
  386,
  91,
]
`;

exports[`hora-wasm > HNSWIndex - bulk inserts and indexes using angular 1`] = `
Uint32Array [
  348,
  708,
  183,
  888,
  482,
  40,
  968,
  781,
  808,
  451,
]
`;

exports[`hora-wasm > HNSWIndex - bulk inserts and indexes using cosine_similarity 1`] = `
Uint32Array [
  891,
  926,
  333,
  481,
  570,
  279,
  88,
  340,
  695,
  362,
]
`;

exports[`hora-wasm > HNSWIndex - bulk inserts and indexes using dot_product 1`] = `
Uint32Array [
  174,
  275,
  113,
  273,
  187,
  440,
  895,
  339,
  981,
  684,
]
`;

exports[`hora-wasm > HNSWIndex - bulk inserts and indexes using euclidean 1`] = `
Uint32Array [
  507,
  262,
  18,
  974,
  800,
  16,
  21,
  158,
  444,
  598,
]
`;

exports[`hora-wasm > HNSWIndex - bulk inserts and indexes using manhattan 1`] = `
Uint32Array [
  191,
  495,
  901,
  216,
  235,
  196,
  14,
  422,
  580,
  448,
]
`;

exports[`hora-wasm > HNSWIndex - creates an index and searches over it using angular 1`] = `
Uint32Array [
  763,
  880,
  722,
  238,
  154,
  881,
  800,
  59,
  220,
  609,
]
`;

exports[`hora-wasm > HNSWIndex - creates an index and searches over it using cosine_similarity 1`] = `
Uint32Array [
  7,
  979,
  540,
  306,
  416,
  686,
  736,
  85,
  455,
  684,
]
`;

exports[`hora-wasm > HNSWIndex - creates an index and searches over it using dot_product 1`] = `
Uint32Array [
  174,
  273,
  113,
  867,
  681,
  468,
  275,
  509,
  946,
  187,
]
`;

exports[`hora-wasm > HNSWIndex - creates an index and searches over it using euclidean 1`] = `
Uint32Array [
  916,
  341,
  77,
  304,
  228,
  829,
  677,
  613,
  637,
  933,
]
`;

exports[`hora-wasm > HNSWIndex - creates an index and searches over it using manhattan 1`] = `
Uint32Array [
  266,
  122,
  269,
  598,
  287,
  731,
  374,
  557,
  847,
  247,
]
`;
